[tool.poetry]
name = "primer-io"
version = "0.1.0"
description = "A project created exclusively to reserve the `primer-io` namespace."
authors = ["Mykola Solodukha <mykola@primer.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
